feat(ui): add Tailwind CSS configuration and global styles
- Created postcss.config.mjs for Tailwind CSS integration.
- Added components.json for UI component configuration with Tailwind support.
- Implemented a Button component with variant and size options using class-variance-authority.
- Introduced utility function `cn` for merging class names.
- Established global CSS styles with custom properties for theming and dark mode support.
- Configured TypeScript paths for better module resolution across the repository.

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,8 +1,14 @@
 {
-  "extends": "@repo/typescript-config/react-library.json",
+  
   "compilerOptions": {
-    "outDir": "dist"
+    //"outDir": "dist"
+    "baseUrl": ".",
+    "paths": {
+      "@ui/*": ["./src/*"],
+      "@ui/components/ui*": ["./src/components/ui/*"],
+      "@lib/utils": ["./lib/utils.ts"],
+    }
   },
-  "include": ["src"],
+  "include": ["."],
   "exclude": ["node_modules", "dist"]
 }
