fix(api): change server port to 5000 for local development fix(ui): update import path for utility functions in button component fix(ui): adjust TypeScript paths for module resolution

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -4,9 +4,10 @@
     //"outDir": "dist"
     "baseUrl": ".",
     "paths": {
+      "@/*": ["./*"],
       "@ui/*": ["./src/*"],
       "@ui/components/ui*": ["./src/components/ui/*"],
-      "@lib/utils": ["./lib/utils.ts"],
+      "@/lib/utils": ["./lib/utils.ts"],
     }
   },
   "include": ["."],
